--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 
 	<div class="banner">
-		<img src="banner-photoshoped.jpg" class="img-fluid">
+		<img src="Banner-photoshoped.jpg" class="img-fluid">
 		<p class="left-heading">Develop<br>Websites &<br>Web Applications</p>
 		<div class="right-heading">
 			<p>Webmaster<br>Guru</p>
