--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-	<link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Kavoon&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
@@ -28,7 +28,7 @@
 					<img src="logo1.png" class="w-100">
 				</a>
 			</div>
-			<div class="col-3 text-right">
+			<div class="col-md-6 col-3 text-right">
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
@@ -36,7 +36,7 @@
 		</div>
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav ml-auto">
-				<li class="nav-item active">
+				<li class="nav-item">
 					<a class="nav-link px-3 mx-1 cl" href="index.html">Home</a>
 				</li>
 				<li class="nav-item">
@@ -57,7 +57,6 @@
 		<div class="mx-3"></div>
 	</nav>
 
-
 	<div class="banner">
 		<img src="Banner-photoshoped.jpg" class="img-fluid">
 		<p class="left-heading">Develop<br>Websites &<br>Web Applications</p>
@@ -70,6 +69,33 @@
 		</div>
 	</div>
 
+	<div class="banner1 my-5">
+		<div class="row m-0 align-items-center">
+			<div class="col-md-5 text-center me">
+				<img src="me.jpg" class="img-fluid w-75">
+			</div>
+			<div class="col-md-7 text-center text-white">
+				<div class="intro py-5">
+					<hr class="m-5">
+					<h1 class="mb-5 px-3">Welcome to Webmaster Guru</h1>
+					<h5 class="px-3">Hello, I'm Sameer Valanju.<br>A web developer based in Mumbai, India.</h5>
+					<hr class="m-5">
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="banner2">
+		<div class="container content">
+			<div class="slider-wrapper"><span style="letter-spacing: 2px;">I develop</span>
+				<div class="slider">
+			        <div class="slider-text1"><span>Desktop Applications</span></div>
+			        <div class="slider-text2"><span>Web Applications</span></div>
+			        <div class="slider-text3"><span>Websites</span></div>
+			    </div>
+			</div>
+		</div>
+	</div>
 
 
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
