--- a/index.html
+++ b/index.html
@@ -97,6 +97,17 @@
 		</div>
 	</div>
 
+	<div class="banner3 my-5 bg-dark">
+		<img src="banner-1.jpg" class="img-fluid">
+		<div class="text-center text-white bn3">
+			<span>I'm available for Freelance.</span>
+			<div class="contact mt-3">
+				<button onclick="window.location.href='contact.html'">Hire Me!</button>
+			</div>
+		</div>
+		
+	</div>
+
 
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
