--- a/index.html
+++ b/index.html
@@ -105,8 +105,54 @@
 				<button onclick="window.location.href='contact.html'">Hire Me!</button>
 			</div>
 		</div>
-		
 	</div>
+
+
+	<div class="footer my-5 pt-3">
+		<hr>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4 py-5">
+					<h3>Hours Info:</h3>
+					<br>
+					<h5 class="mb-2">Monday to Friday,</h5>
+					<h6>7 AM to 11 AM</h6>
+					<h6>9.30 AM to 12 AM</h6>
+					<br>
+					<h5 class="mb-2">Saturday & Sunday,</h5>
+					<h6>8 AM to 11 PM</h6>
+				</div>
+				<div class="col-md-4 py-5">
+					<h3>Menu:</h3>
+					<br>
+					<ul class="footer-nav">
+						<li class="fnav-link">
+							<a href="index.html"><h5>Home</h5></a>
+						</li>
+						<li class="fnav-link">
+							<a href="about.html"><h5>About</h5></a>
+						</li>
+						<li class="fnav-link">
+							<a href="contact.html"><h5>Contact</h5></a>
+						</li>
+					</ul>
+				</div>
+				<div class="col-md-4 py-5">
+					<h3>Follow Me:</h3>
+					<div class="fsi">
+						<a href="https://www.facebook.com/sameer.valanju.5"><i class="bi bi-facebook mx-2"></i></a>
+						<a href="https://www.instagram.com/sameer_valanju"><i class="bi bi-instagram mx-2"></i></a>
+						<a href="https://twitter.com/sameer_valanju?t=B5abuSIde8vPvUd6HFEFMA&s=09"><i class="bi bi-twitter mx-2"></i></a>
+						<a href="https://www.linkedin.com/in/sameer-valanju-10873b19b"><i class="bi bi-linkedin mx-2"></i></a>
+						<a href="mailto: sameer.valanju@webmasterguru.in"><i class="bi bi-envelope-fill mx-2"></i></a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<hr>
+		<h6 class="text-muted text-center my-5">Copyright &copy; 2021 Webmaster Guru. All rights reserved.</h6>
+	</div>
+	
 
 
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
