--- a/contact.html
+++ b/contact.html
@@ -111,7 +111,7 @@
 			<div class="card align-items-center py-5 sicard">
 				<a href="https://twitter.com/sameer_valanju?t=B5abuSIde8vPvUd6HFEFMA&s=09">
 					<img src="tweet.png" class="w-50">
-					<h4 class="mt-3">Tweeter</h4>
+					<h4 class="mt-3">Twitter</h4>
 				</a>
 			</div>
 			<div class="card align-items-center py-5 sicard">
