--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Webmaster Guru</title>
+	<link rel="icon" type="image/png" href="icon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
@@ -18,7 +19,7 @@
 		<a href="https://www.instagram.com/sameer_valanju"><i class="bi bi-instagram mx-2"></i></a>
 		<a href="https://twitter.com/sameer_valanju?t=B5abuSIde8vPvUd6HFEFMA&s=09"><i class="bi bi-twitter mx-2"></i></a>
 		<a href="https://www.linkedin.com/in/sameer-valanju-10873b19b"><i class="bi bi-linkedin mx-2"></i></a>
-		<a href="mailto: sameer.valanju@webmasterguru.in"><i class="bi bi-envelope-fill mx-2"></i></a>
+		<a href="mailto:contact.webmasterguru@gmail.com"><i class="bi bi-envelope-fill mx-2"></i></a>
 	</div>
 
 	<nav class="navbar navbar-expand-lg bg-light navbar-light text-center">
@@ -51,7 +52,7 @@
 				<a href="https://www.instagram.com/sameer_valanju"><i class="bi bi-instagram"></i></a>
 				<a href="https://twitter.com/sameer_valanju?t=B5abuSIde8vPvUd6HFEFMA&s=09"><i class="bi bi-twitter"></i></a>
 				<a href="https://www.linkedin.com/in/sameer-valanju-10873b19b"><i class="bi bi-linkedin"></i></a>
-				<a href="mailto: sameer.valanju@webmasterguru.in"><i class="bi bi-envelope-fill"></i></a>
+				<a href="mailto:contact.webmasterguru@gmail.com"><i class="bi bi-envelope-fill"></i></a>
 			</span>
 		</div>
 		<div class="mx-3"></div>
@@ -144,7 +145,7 @@
 						<a href="https://www.instagram.com/sameer_valanju"><i class="bi bi-instagram mx-2"></i></a>
 						<a href="https://twitter.com/sameer_valanju?t=B5abuSIde8vPvUd6HFEFMA&s=09"><i class="bi bi-twitter mx-2"></i></a>
 						<a href="https://www.linkedin.com/in/sameer-valanju-10873b19b"><i class="bi bi-linkedin mx-2"></i></a>
-						<a href="mailto: sameer.valanju@webmasterguru.in"><i class="bi bi-envelope-fill mx-2"></i></a>
+						<a href="mailto:contact.webmasterguru@gmail.com"><i class="bi bi-envelope-fill mx-2"></i></a>
 					</div>
 				</div>
 			</div>
