--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<nav class="navbar navbar-expand-lg bg-light navbar-light text-center">
 		<div class="row align-items-center">
 			<div class="col-md-6 col-9">
-				<a class="navbar-brand" href="index.html">
+				<a class="navbar-brand" href="https://www.webmasterguru.in/">
 					<img src="logo1.png" class="w-100">
 				</a>
 			</div>
@@ -38,7 +38,7 @@
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item">
-					<a class="nav-link px-3 mx-1 cl" href="index.html">Home</a>
+					<a class="nav-link px-3 mx-1 cl" href="https://www.webmasterguru.in/">Home</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link px-3 mx-1" href="about.html">About</a>
@@ -128,7 +128,7 @@
 					<br>
 					<ul class="footer-nav">
 						<li class="fnav-link">
-							<a href="index.html"><h5>Home</h5></a>
+							<a href="https://www.webmasterguru.in/"><h5>Home</h5></a>
 						</li>
 						<li class="fnav-link">
 							<a href="about.html"><h5>About</h5></a>
