--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<nav class="navbar navbar-expand-lg bg-light navbar-light text-center">
 		<div class="row align-items-center">
 			<div class="col-md-6 col-9">
-				<a class="navbar-brand" href="https://www.webmasterguru.in/">
+				<a class="navbar-brand" href="/">
 					<img src="logo1.png" class="w-100">
 				</a>
 			</div>
