--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item">
-					<a class="nav-link px-3 mx-1 cl" href="https://www.webmasterguru.in/">Home</a>
+					<a class="nav-link px-3 mx-1 cl" href="/">Home</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link px-3 mx-1" href="about.html">About</a>
@@ -128,7 +128,7 @@
 					<br>
 					<ul class="footer-nav">
 						<li class="fnav-link">
-							<a href="https://www.webmasterguru.in/"><h5>Home</h5></a>
+							<a href="/"><h5>Home</h5></a>
 						</li>
 						<li class="fnav-link">
 							<a href="about.html"><h5>About</h5></a>
