--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
 					<a class="nav-link px-3 mx-1" href="about">About</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link px-3 mx-1" href="contact.html">Contact</a>
+					<a class="nav-link px-3 mx-1" href="contact">Contact</a>
 				</li>
 			</ul>
 			<span class="si pt-3">
@@ -202,7 +202,7 @@
 							<a href="about"><h5>About</h5></a>
 						</li>
 						<li class="fnav-link">
-							<a href="contact.html"><h5>Contact</h5></a>
+							<a href="contact"><h5>Contact</h5></a>
 						</li>
 					</ul>
 				</div>
