--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
 	<nav class="navbar navbar-expand-lg bg-light navbar-light text-center">
 		<div class="row align-items-center">
 			<div class="col-md-6 col-9">
-				<a class="navbar-brand" href="index.html">
+				<a class="navbar-brand" href="/">
 					<img src="logo1.png" class="w-100">
 				</a>
 			</div>
@@ -61,13 +61,13 @@
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item">
-					<a class="nav-link px-3 mx-1 cl" href="index.html">Home</a>
+					<a class="nav-link px-3 mx-1 cl" href="/">Home</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link px-3 mx-1" href="about.html">About</a>
+					<a class="nav-link px-3 mx-1" href="about">About</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link px-3 mx-1" href="contact.html">Contact</a>
+					<a class="nav-link px-3 mx-1" href="contact">Contact</a>
 				</li>
 			</ul>
 			<span class="si pt-3">
@@ -176,13 +176,13 @@
 					<br>
 					<ul class="footer-nav">
 						<li class="fnav-link">
-							<a href="index.html"><h5>Home</h5></a>
+							<a href="/"><h5>Home</h5></a>
 						</li>
 						<li class="fnav-link">
-							<a href="about.html"><h5>About</h5></a>
+							<a href="about"><h5>About</h5></a>
 						</li>
 						<li class="fnav-link">
-							<a href="contact.html"><h5>Contact</h5></a>
+							<a href="contact"><h5>Contact</h5></a>
 						</li>
 					</ul>
 				</div>
