--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 					<a class="nav-link px-3 mx-1 cl" href="/">Home</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link px-3 mx-1" href="about.html">About</a>
+					<a class="nav-link px-3 mx-1" href="about">About</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link px-3 mx-1" href="contact.html">Contact</a>
+					<a class="nav-link px-3 mx-1" href="contact">Contact</a>
 				</li>
 			</ul>
 			<span class="si pt-3">
@@ -131,10 +131,10 @@
 							<a href="/"><h5>Home</h5></a>
 						</li>
 						<li class="fnav-link">
-							<a href="about.html"><h5>About</h5></a>
+							<a href="about"><h5>About</h5></a>
 						</li>
 						<li class="fnav-link">
-							<a href="contact.html"><h5>Contact</h5></a>
+							<a href="contact"><h5>Contact</h5></a>
 						</li>
 					</ul>
 				</div>
