--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
                     .then(function() {
                         console.log('SUCCESS!');
                         $("#contact-form")[0].reset();
-                        alert("Form Sumbitted.")
+                        alert("Thank you for contacting us. Your form has been submitted successfully. We will get back to you asap!")
                     }, function(error) {
                         console.log('FAILED...', error);
                         alert("Some error occured. Please re-sumbit the form.")
