--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 	<link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
 	<link rel="stylesheet" type="text/css" href="contact.css">
 	
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
@@ -25,7 +26,8 @@
                     .then(function() {
                         console.log('SUCCESS!');
                         $("#contact-form")[0].reset();
-                        alert("Thank you for contacting us. Your form has been submitted successfully. We will get back to you asap!")
+			$('#CForm').modal('show')
+                        //alert("Thank you for contacting us. Your form has been submitted successfully. We will get back to you asap!")
                     }, function(error) {
                         console.log('FAILED...', error);
                         alert("Some error occured. Please re-sumbit the form.")
@@ -35,6 +37,23 @@
     </script>
 </head>
 <body>
+	
+	<div class="modal" id="CForm">
+		<div class="modal-dialog modal-dialog-centered">
+			<div class="modal-content">
+				<div class="modal-header alert-success">
+					<h5 class="modal-title">Thank you for contacting us!</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true"><i class="far fa-times-circle"></i></span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<p>Your form has been submitted successfully.</p>
+					<p>We will get back to you ASAP !</p>
+				</div>
+			</div>
+		</div>
+	</div>
 
 
 	<div class="header text-center my-2">
