--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 		<div class="text-center text-white bn3">
 			<span>I'm available for Freelance.</span>
 			<div class="contact mt-3">
-				<button onclick="window.location.href='contact.html'">Hire Me!</button>
+				<button onclick="window.location.href='contact'">Hire Me!</button>
 			</div>
 		</div>
 	</div>
