--- a/about.html
+++ b/about.html
@@ -223,6 +223,12 @@
 	</div>
 	
 
+<script>
+document.addEventListener("contextmenu", function(event){
+event.preventDefault();  
+}, false);
+</script>
+	
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
 
