--- a/contact.html
+++ b/contact.html
@@ -221,6 +221,12 @@
 		<h6 class="text-muted text-center my-5">Copyright &copy; 2021 Webmaster Guru. All rights reserved.</h6>
 	</div>
 	
+	
+<script>
+document.addEventListener("contextmenu", function(event){
+event.preventDefault();  
+}, false);
+</script>
 
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
