--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Kavoon&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="index.css">
+	<meta name="google-site-verification" content="HN3sjZJJ1uMoKqS2sqciIzc0clQ3oN8NIUNmnyxmeWU" />
 </head>
 <body>
 
