--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 	<div class="banner1 my-5">
 		<div class="row m-0 align-items-center">
 			<div class="col-md-5 text-center me">
-				<img src="me.jpg" class="img-fluid w-75">
+				<img src="PicsArt_12-01-11.15.50.jpg" class="img-fluid w-75">
 			</div>
 			<div class="col-md-7 text-center text-white">
 				<div class="intro py-5">
