--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item">
 					<!--<a class="nav-link px-3 mx-1 active" href="SinglePageSite.html">Home</a>-->
-					<button class="btn" onclick="window.location.href='SinglePageSite.html'">Home</button>
+					<button class="btn" onclick="https://www.webmasterguru.in">Home</button>
 				</li>
 				<li class="nav-item">
 					<!--<a class="nav-link px-3 mx-1" href="#AboutPage">About</a>-->
@@ -387,13 +387,13 @@
 					<br>
 					<ul class="footer-nav">
 						<li class="fnav-link">
-							<a href="SinglePageSite.html"><h5>Home</h5></a>
+							<button class="btn" onclick="https://www.webmasterguru.in">Home</button>
 						</li>
 						<li class="fnav-link">
-							<a href="#AboutPage"><h5>About</h5></a>
+							<button class="btn AboutBtn">About</button>
 						</li>
 						<li class="fnav-link">
-							<a href="#ContactPage"><h5>Contact</h5></a>
+							<button class="btn ContactBtn">Contact</button>
 						</li>
 					</ul>
 				</div>
