--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 					<br>
 					<ul class="footer-nav">
 						<li class="fnav-link">
-							<button class="btn" onclick="window.ocation.href='http://www.webmasterguru.in/'">Home</button>
+							<button class="btn" onclick="window.location.href='http://www.webmasterguru.in/'">Home</button>
 						</li>
 						<li class="fnav-link">
 							<button class="btn AboutBtn">About</button>
