--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item">
 					<!--<a class="nav-link px-3 mx-1 active" href="SinglePageSite.html">Home</a>-->
-					<button class="btn" onclick="window.ocation.href='http://www.webmasterguru.in/'">Home</button>
+					<button class="btn" onclick="window.location.href='http://www.webmasterguru.in/'">Home</button>
 				</li>
 				<li class="nav-item">
 					<!--<a class="nav-link px-3 mx-1" href="#AboutPage">About</a>-->
