--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 	<nav class="navbar navbar-expand-lg bg-light navbar-light text-center">
 		<div class="row align-items-center">
 			<div class="col-md-6 col-9">
-				<a class="navbar-brand" href="http://www.webmasterguru.in/">
+				<a class="navbar-brand" href="https://webmasterguru.in/">
 					<img src="logo1.png" class="w-100">
 				</a>
 			</div>
@@ -71,7 +71,7 @@
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item">
 					<!--<a class="nav-link px-3 mx-1 active" href="SinglePageSite.html">Home</a>-->
-					<button class="btn" onclick="window.location.href='http://www.webmasterguru.in/'">Home</button>
+					<button class="btn" onclick="window.location.href='https://webmasterguru.in/'">Home</button>
 				</li>
 				<li class="nav-item">
 					<!--<a class="nav-link px-3 mx-1" href="#AboutPage">About</a>-->
@@ -387,7 +387,7 @@
 					<br>
 					<ul class="footer-nav">
 						<li class="fnav-link">
-							<button class="btn" onclick="window.location.href='http://www.webmasterguru.in/'">Home</button>
+							<button class="btn" onclick="window.location.href='https://webmasterguru.in/'">Home</button>
 						</li>
 						<li class="fnav-link">
 							<button class="btn AboutBtn">About</button>
