--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 		<div class="container cont1">
 			<div class="row align-items-center py-5">
 				<div class="col-md-4 text-center">
-					<img src="me2.jpg" class="img-fluid w-75 rounded-circle">
+					<img src="me.jpg" class="img-fluid w-75 rounded-circle">
 				</div>
 				<div class="col-md-8">
 					<h3 class="mt-5 mb-3">Hello, I'm Sameer Valanju.</h3>
