--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
 
 		<div class="container cont1">
 			<div class="row align-items-center py-5">
-				<div class="col-md-4 text-center">
-					<img src="me2.jpg" class="img-fluid w-75 rounded-circle">
+				<div class="col-md-5 text-center">
+					<img src="me3.jpg" class="img-fluid rounded w-100" style="box-shadow: rgba(202, 32, 23, 1) 0px 12px 28px 0px, rgba(202, 32, 23, 1) 0px 2px 4px 0px, rgba(202, 32, 23, 1) 0px 0px 0px 1px inset;">
 				</div>
-				<div class="col-md-8">
+				<div class="col-md-7">
 					<h3 class="mt-5 mb-3">Hello, I'm Sameer Valanju.</h3>
 					<h5 class="mb-5 text-justify">I’ve good experience in designing and developing websites, web applications and desktop applications. Currently I’m working as Programmer Analyst in an reputed MNC Company. My working experience covers a wide variety of project scopes including product design, mobile apps, e-commerce websites and web applications. Also I’m good at WordPress.</h5>
 				</div>
