--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
 		$(".AboutBtn").click(function() {
 		    $('html,body').animate({
 		        scrollTop: $("#AboutPage").offset().top},
-		        'fast');
+		        'slow');
 		});
 
 
@@ -452,7 +452,7 @@
 		$(".ContactBtn").click(function() {
 		    $('html,body').animate({
 		        scrollTop: $("#ContactPage").offset().top},
-		        'fast');
+		        'slow');
 		});
 </script>
 
