--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
 				</a>
 			</div>
 			<div class="col-md-6 col-3 text-right">
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="my-1 mx-2 close">X</span>
 					<span class="navbar-toggler-icon"></span>
 				</button>
 			</div>
