--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 		<div class="container cont1">
 			<div class="row align-items-center py-5">
 				<div class="col-md-5 text-center">
-					<img src="me3.jpg" class="img-fluid rounded w-100" style="box-shadow: rgba(202, 32, 23, 1) 0px 12px 28px 0px, rgba(202, 32, 23, 1) 0px 2px 4px 0px, rgba(202, 32, 23, 1) 0px 0px 0px 1px inset;">
+					<img src="me3.jpeg" class="img-fluid rounded w-100" style="box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;">
 				</div>
 				<div class="col-md-7">
 					<h3 class="mt-5 mb-3">Hello, I'm Sameer Valanju.</h3>
