--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Webmaster Guru</title>
-	<link rel="icon" type="image/png" href="icon.jpg">
+	<link rel="icon" type="image/png" href="/w3smclsmrv/icon.jpg">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
@@ -58,7 +58,7 @@
 		<div class="row align-items-center">
 			<div class="col-md-6 col-9">
 				<a class="navbar-brand" href="https://webmasterguru.in/">
-					<img src="logo1.png" class="w-100">
+					<img src="/w3smclsmrv/logo1.png" class="w-100">
 				</a>
 			</div>
 			<div class="col-md-6 col-3 text-right">
@@ -102,21 +102,21 @@
 <!-- Home Page Content -->
 
 	<div class="banner">
-		<img src="Banner-photoshoped.jpg" class="img-fluid">
+		<img src="/w3smclsmrv/Banner-photoshoped.jpg" class="img-fluid">
 		<p class="left-heading">Develop<br>Websites &<br>Web Applications</p>
 		<div class="right-heading">
 			<p>Webmaster<br>Guru</p>
-			<img src="facebook.png" class="img-fluid">
-			<img src="instagram.png" class="img-fluid">
-			<img src="twitter.png" class="img-fluid">
-			<img src="linkedin.png" class="img-fluid">
+			<img src="/w3smclsmrv/facebook.png" class="img-fluid">
+			<img src="/w3smclsmrv/instagram.png" class="img-fluid">
+			<img src="/w3smclsmrv/twitter.png" class="img-fluid">
+			<img src="/w3smclsmrv/linkedin.png" class="img-fluid">
 		</div>
 	</div>
 
 	<div class="banner1 my-5">
 		<div class="row m-0 align-items-center">
 			<div class="col-md-5 text-center me">
-				<img src="me.jpg" class="img-fluid w-75">
+				<img src="/w3smclsmrv/me.jpg" class="img-fluid w-75">
 			</div>
 			<div class="col-md-7 text-center text-white">
 				<div class="intro py-5">
@@ -143,7 +143,7 @@
 	</div>
 
 	<div class="banner3 my-5 bg-dark">
-		<img src="banner-1.jpg" class="img-fluid">
+		<img src="/w3smclsmrv/banner-1.jpg" class="img-fluid">
 		<div class="text-center text-white bn3">
 			<span>I'm available for Freelance.</span>
 			<div class="contact mt-3">
@@ -162,7 +162,7 @@
 		<div class="container cont1">
 			<div class="row align-items-center py-5">
 				<div class="col-md-5 text-center">
-					<img src="me3.jpeg" class="img-fluid rounded w-100" style="box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;">
+					<img src="/w3smclsmrv/me3.jpeg" class="img-fluid rounded w-100" style="box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;">
 				</div>
 				<div class="col-md-7">
 					<h3 class="mt-5 mb-3">Hello, I'm Sameer Valanju.</h3>
@@ -302,7 +302,7 @@
 				<h4 class="text-center ctr-head">Don’t hesitate to reach out with the contact information below, you can send a message using the form.</h4>
 				<div class="row align-items-center">
 					<div class="col-md-6 my-5 text-center">
-						<img src="contact.webp" class="img-fluid rounded-circle">
+						<img src="/w3smclsmrv/contact.webp" class="img-fluid rounded-circle">
 					</div>
 					<div class="col-md-2"></div>
 					<div class="col-md-4 my-5">
@@ -334,31 +334,31 @@
 			<div class="card-deck">
 				<div class="card align-items-center py-5 sicard">
 					<a href="https://www.facebook.com/sameer.valanju.5">
-						<img src="fb.png" class="w-50">
+						<img src="/w3smclsmrv/fb.png" class="w-50">
 						<h4 class="mt-3">Facebook</h4>
 					</a>
 				</div>
 				<div class="card align-items-center py-5 sicard">
 					<a href="https://www.instagram.com/sameer_valanju">
-						<img src="insta.png" class="w-50">
+						<img src="/w3smclsmrv/insta.png" class="w-50">
 						<h4 class="mt-3">Instagram</h4>
 					</a>
 				</div>
 				<div class="card align-items-center py-5 sicard">
 					<a href="https://twitter.com/sameer_valanju?t=B5abuSIde8vPvUd6HFEFMA&s=09">
-						<img src="tweet.png" class="w-50">
+						<img src="/w3smclsmrv/tweet.png" class="w-50">
 						<h4 class="mt-3">Twitter</h4>
 					</a>
 				</div>
 				<div class="card align-items-center py-5 sicard">
 					<a href="https://www.linkedin.com/in/sameer-valanju-10873b19b">
-						<img src="in.png" class="w-50">
+						<img src="/w3smclsmrv/in.png" class="w-50">
 						<h4 class="mt-3">Linkedin</h4>
 					</a>
 				</div>
 				<div class="card align-items-center py-5 sicard">
 					<a href="mailto:contact.webmasterguru@gmail.com">
-						<img src="email.png" class="w-50">
+						<img src="/w3smclsmrv/email.png" class="w-50">
 						<h4 class="mt-3">Email</h4>
 					</a>
 				</div>
