--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
     </script>
 </head>
 <body>
+	
+	
+<!-- Page Loader -->
+	<div id="loading">
+		<img src="D:/My Portfolio Website/w3smclsmrv/spinner.gif" id="loading-image" alt="Loading..." />
+	</div>
 
 
 <!-- Header & Navbar -->
@@ -417,6 +423,11 @@
 
 
 <script type="text/javascript">
+	/* Page Loader */
+		$(window).on('load', function(){
+			$('#loading').hide();
+		})	
+	
 	/* Scroll to Top */
 		//Get the button
 		let mybutton = document.getElementById("topBtn");
