--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	
 <!-- Page Loader -->
 	<div id="loading">
-		<img src="D:/My Portfolio Website/w3smclsmrv/spinner.gif" id="loading-image" alt="Loading..." />
+		<img src="/w3smclsmrv/spinner.gif" id="loading-image" alt="Loading..." />
 	</div>
 
 
