--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title>Webmaster Guru</title>
 	<link rel="icon" type="image/png" href="/w3smclsmrv/icon.jpg">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="author" content="Sameer Valanju">
+	<meta name="description" content="Hello, I am Sameer. Freelance web developer based in Mumbai, India. I develop websites, web applications & desktop applications. Read More...">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 	<link href="https://fonts.googleapis.com/css2?family=Kavoon&display=swap" rel="stylesheet">
