--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@
 			<div class="notfound-404">
 				<h1>404</h1>
 				<h2>Page not found</h2>
-				<p>The page you are looking for might have been removed had its name changed or is temporarily unavailable.</p>
+				<p>The page you are looking for might have been removed, had its name changed or is temporarily unavailable.</p>
 			</div>
 			<a href="https://webmasterguru.in/">Homepage</a>
 		</div>
