--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Webmaster Guru</title>
+	<title>Webmaster Guru - Freelance web developer</title>
 	<link rel="icon" type="image/png" href="/w3smclsmrv/icon.jpg">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="author" content="Sameer Valanju">
