--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 		<a href="https://twitter.com/sameer_valanju?t=B5abuSIde8vPvUd6HFEFMA&s=09"><i class="bi bi-twitter mx-2"></i></a>
 		<a href="https://www.linkedin.com/in/sameer-valanju-10873b19b"><i class="bi bi-linkedin mx-2"></i></a>
 		<a href="mailto:contact.webmasterguru@gmail.com"><i class="bi bi-envelope-fill mx-2"></i></a>
+		<a href="https://github.com/SValanju"><i class="bi bi-github mx-2"></i></a>
 	</div>
 
 	<nav class="navbar navbar-expand-lg bg-light navbar-light text-center">
@@ -111,7 +112,16 @@
 
 	<div class="banner">
 		<img src="/w3smclsmrv/Banner-photoshoped.jpg" class="img-fluid">
-		<p class="left-heading">Develop<br>Websites &<br>Web Applications</p>
+		<p class="left-heading">
+			<a href="" class="typewrite text-white text-decoration-none" data-period="2000" data-type='[ "Full-Stack Developer", "I Create...", "I Design...", "I Develop..." ]'>
+				<span class="wrap"></span>
+			</a>
+			<br>
+			<a href="#letsConnect" role="button" class="btn btn-outline-light rounded-pill px-3">
+				<img src="/w3smclsmrv/operator.png" class="img-fluid">
+				Let's Talk
+			</a>
+		</p>
 		<div class="right-heading">
 			<p>Webmaster<br>Guru</p>
 			<img src="/w3smclsmrv/facebook.png" class="img-fluid">
@@ -130,7 +140,7 @@
 				<div class="intro py-5">
 					<hr class="m-5">
 					<h1 class="mb-5 px-3">Welcome to Webmaster Guru</h1>
-					<h5 class="px-3 pb-3">Hello, I'm Sameer Valanju.<br>A web developer based in Mumbai, India.</h5>
+					<h5 class="px-3 pb-3">Hello, I'm Sameer Valanju.<br>A full-stack developer based in Mumbai, India.</h5>
 					<button class="btn AboutBtn">Read More >></button>
 					<hr class="m-5">
 				</div>
@@ -150,16 +160,6 @@
 		</div>
 	</div>
 
-	<div class="banner3 my-5 bg-dark">
-		<img src="/w3smclsmrv/banner-1.jpg" class="img-fluid">
-		<div class="text-center text-white bn3">
-			<span>I'm available for Freelance.</span>
-			<div class="contact mt-3">
-				<button class="btn ContactBtn">Hire Me!</button>
-			</div>
-		</div>
-	</div>
-
 
 <!-- About Page Content -->
 	<div id="AboutPage">
@@ -174,7 +174,23 @@
 				</div>
 				<div class="col-md-7">
 					<h3 class="mt-5 mb-3">Hello, I'm Sameer Valanju.</h3>
-					<h5 class="mb-5 text-justify">I’ve good experience in designing and developing websites, web applications and desktop applications. Currently I’m working as Associate Consultant in an reputed Company. My 2+ years of working experience covers a wide variety of project scopes including product design, mobile apps, e-commerce websites and web applications.</h5>
+					<h5 class="mb-5 text-justify">I’ve good experience in designing and developing websites, web applications and desktop applications. Currently I’m working as Associate Consultant in an reputed Company. My 4+ years of working experience covers a wide variety of project scopes including product design, mobile apps, e-commerce websites and web applications.</h5>
+				</div>
+			</div>
+		</div>
+
+		<div class="banner3 my-5 bg-dark">
+			<img src="/w3smclsmrv/banner-1.jpg" class="img-fluid">
+			<div class="text-white bn3 w-75 py-5 rounded">
+				<p class="bn3Head"><i class="fa-solid fa-laptop-code mr-4"></i>What I Do ?</p>
+				<h3 class="px-5 pt-3">
+					<p>I work fluently with all aspects and layers of software engineering, from early prototyping to full-scale production use. I build the user interfaces using technologies like ASP.NET, MVC and JavaScript frameworks like Angular, and I handle the server-side logic with C# and .NET. I also manage databases, collaborate with teams, and stay up-to-date with the latest in .NET development.It's all about bringing awesome web applications to life!
+					</p>
+					<p>Whether it's about business requirements, UI/UX, APIs, databases, backend or your fancy new micro-frontend, I'm confident I can help you. With years of hands-on experience architecting complex cloud and standalone applications I'm equipped to help with whatever you can throw at me.
+					</p>
+				</h3>
+				<div class="contact text-center">
+					<button class="btn ContactBtn">Hire Me!</button>
 				</div>
 			</div>
 		</div>
@@ -186,22 +202,51 @@
 					<h1 class="pt-3 b">Coding Skills:</h1>
 					<div class="row pt-3">
 						<div class="col-md-6">
-							<h4 class="pt-3">C#, ASP.NET, MVC</h4>
+							<h4 class="pt-3">Microsoft .NET / C#</h4>
 							<div class="bar learning"></div>
-							<h4 class="pt-3">Python</h4>
-							<div class="bar learning1"></div>
 							<h4 class="pt-3">HTML & CSS</h4>
 							<div class="bar learning2"></div>
-							<h4 class="pt-3">Javascript</h4>
-							<div class="bar learning3"></div>
-						</div>
-						<div class="col-md-6">
-							<h4 class="pt-3">MySQL, PostgreSQL</h4>
+							<h4 class="pt-3">SQL, Postgres</h4>
 							<div class="bar learning4"></div>
 							<h4 class="pt-3">Wordpress</h4>
 							<div class="bar learning5"></div>
+						</div>
+						<div class="col-md-6">
+							<h4 class="pt-3">Angular</h4>
+							<div class="bar learning4"></div>
+							<h4 class="pt-3">Javascript / jQuery</h4>
+							<div class="bar learning3"></div>
 							<h4 class="pt-3">UI/UX</h4>
 							<div class="bar learning6"></div>
+							<h4 class="pt-3">Python</h4>
+							<div class="bar learning1"></div>
+						</div>
+						<div class="col-md-12 mt-3 text-monospace">
+							<p>
+								<span class="badge badge-pill skillBadge">.NET Framework</span>
+								<span class="badge badge-pill skillBadge">ASP.NET</span>
+								<span class="badge badge-pill skillBadge">MVC</span>
+								<span class="badge badge-pill skillBadge">.NET Core</span>
+								<span class="badge badge-pill skillBadge">OOPs</span>
+								<span class="badge badge-pill skillBadge">SQL Server</span>
+								<span class="badge badge-pill skillBadge">SSRS</span>
+								<span class="badge badge-pill skillBadge">Web API</span>
+								<span class="badge badge-pill skillBadge">Web Services</span>
+								<span class="badge badge-pill skillBadge">IIS</span>
+								<span class="badge badge-pill skillBadge">TypeScript</span>
+								<span class="badge badge-pill skillBadge">Bootstrap</span>
+								<span class="badge badge-pill skillBadge">AJAX</span>
+								<span class="badge badge-pill skillBadge">VAPT</span>
+								<span class="badge badge-pill skillBadge">Version Control</span>
+								<span class="badge badge-pill skillBadge">Git</span>
+								<span class="badge badge-pill skillBadge">Agile Methodologies</span>
+								<span class="badge badge-pill skillBadge">Debugging/Testing</span>
+								<span class="badge badge-pill skillBadge">SEO</span>
+								<span class="badge badge-pill skillBadge">Visual Studio</span>
+								<span class="badge badge-pill skillBadge">Linux</span>
+								<span class="badge badge-pill skillBadge">Canva</span>
+								<span class="badge badge-pill skillBadge">Helpdesk Support</span>
+							</p>
 						</div>
 					</div>
 				</div>
@@ -210,8 +255,8 @@
 		</div>
 
 		<div class="abt-banner my-5">
-			<div class="container py-5">
-				<div class="abt-content text-white my-5">
+			<div class="container text-white py-5">
+				<div class="abt-content my-5">
 					<h1 class="text-center mb-5">Projects</h1>
 					<h3 class="pt-3">2021 :</h3><br>
 					<h4 style="letter-spacing: 1px;">Developed business website for ARV Relocations, India.</h4>
@@ -222,6 +267,10 @@
 					<h3 class="pt-3">2019 :</h3><br>
 					<h4 style="letter-spacing: 1px;">Developed consultancy website for Caspian Education, India.</h4>
 					<div style="display: flex;" class="mb-5"><h5><i class="bi bi-globe2"></i></h5><h5 class="px-2"><a href="https://caspianeduindia.com" class="text-white">caspianeduindia.com</a></h5></div>
+				</div>
+				<div class="p-2 d-flex justify-content-end align-items-center" style="background-color: rgba(0,0,0,.7);">
+					<h5 class="m-0">For more projects visit my github account.</h5>
+					<button class="btn btn-light mx-2" onclick="window.location.href='https://github.com/SValanju'"><i class="fa-brands fa-github mr-2"></i>GitHub</button>
 				</div>
 			</div>
 		</div>
@@ -340,8 +389,8 @@
 			</div>
 		</div>
 
-		<div class="container my-5 py-5">
-			<h1 class="text-center mb-5">Let's Connect</h1>
+		<div class="container my-5 py-5" id="letsConnect">
+			<h1 class="text-center mb-5">Connect With Me</h1>
 			<div class="card-deck">
 				<div class="card align-items-center py-5 sicard">
 					<a href="https://www.facebook.com/sameer.valanju.5">
@@ -371,6 +420,12 @@
 					<a href="mailto:contact.webmasterguru@gmail.com">
 						<img src="/w3smclsmrv/email.png" class="w-50">
 						<h4 class="mt-3">Email</h4>
+					</a>
+				</div>
+				<div class="card align-items-center py-5 sicard">
+					<a href="https://github.com/SValanju">
+						<img src="/w3smclsmrv/github-mark.png" class="w-50">
+						<h4 class="mt-3">GitHub</h4>
 					</a>
 				</div>
 			</div>
@@ -417,6 +472,7 @@
 						<a href="https://twitter.com/sameer_valanju?t=B5abuSIde8vPvUd6HFEFMA&s=09"><i class="bi bi-twitter mx-2"></i></a>
 						<a href="https://www.linkedin.com/in/sameer-valanju-10873b19b"><i class="bi bi-linkedin mx-2"></i></a>
 						<a href="mailto:contact.webmasterguru@gmail.com"><i class="bi bi-envelope-fill mx-2"></i></a>
+						<a href="https://github.com/SValanju"><i class="bi bi-github mx-2"></i></a>
 					</div>
 				</div>
 			</div>
@@ -424,14 +480,12 @@
 		<hr>
 		<h6 class="text-muted text-center my-5">Copyright &copy; 2021 Webmaster Guru. All rights reserved.</h6>
 	</div>
-	
-
 
 <script type="text/javascript">
 	/* Page Loader */
 		$(window).on('load', function(){
 			$('#loading').hide();
-		})	
+		});
 	
 	/* Scroll to Top */
 		//Get the button
@@ -471,12 +525,69 @@
 		        scrollTop: $("#ContactPage").offset().top},
 		        'slow');
 		});
+
+
+
+	/* Typing Effect */
+	var TxtType = function(el, toRotate, period) {
+		this.toRotate = toRotate;
+		this.el = el;
+		this.loopNum = 0;
+		this.period = parseInt(period, 10) || 2000;
+		this.txt = '';
+		this.tick();
+		this.isDeleting = false;
+	};
+	TxtType.prototype.tick = function() {
+		var i = this.loopNum % this.toRotate.length;
+		var fullTxt = this.toRotate[i];
+
+		if (this.isDeleting) {
+			this.txt = fullTxt.substring(0, this.txt.length - 1);
+		} else {
+			this.txt = fullTxt.substring(0, this.txt.length + 1);
+		}
+
+		this.el.innerHTML = '<span class="wrap">'+this.txt+'</span>';
+
+		var that = this;
+		var delta = 200 - Math.random() * 100;
+
+		if (this.isDeleting) { delta /= 2; }
+
+		if (!this.isDeleting && this.txt === fullTxt) {
+			delta = this.period;
+			this.isDeleting = true;
+		} else if (this.isDeleting && this.txt === '') {
+			this.isDeleting = false;
+			this.loopNum++;
+			delta = 500;
+		}
+
+		setTimeout(function() {
+		that.tick();
+		}, delta);
+	};
+	window.onload = function() {
+		var elements = document.getElementsByClassName('typewrite');
+		for (var i=0; i<elements.length; i++) {
+			var toRotate = elements[i].getAttribute('data-type');
+			var period = elements[i].getAttribute('data-period');
+			if (toRotate) {
+				new TxtType(elements[i], JSON.parse(toRotate), period);
+			}
+		}
+		// INJECT CSS
+		var css = document.createElement("style");
+		css.type = "text/css";
+		css.innerHTML = ".typewrite > .wrap { border-right: 0.08em solid #fff}";
+		document.body.appendChild(css);
+	};
 </script>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
 
-</script>
 </body>
 </html>
