--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 				<a href="https://twitter.com/sameer_valanju?t=B5abuSIde8vPvUd6HFEFMA&s=09"><i class="bi bi-twitter"></i></a>
 				<a href="https://www.linkedin.com/in/sameer-valanju-10873b19b"><i class="bi bi-linkedin"></i></a>
 				<a href="mailto:contact.webmasterguru@gmail.com"><i class="bi bi-envelope-fill"></i></a>
+				<a href="https://github.com/SValanju"><i class="bi bi-github mx-2"></i></a>
 			</span>
 		</div>
 		<div class="mx-3"></div>
@@ -113,11 +114,11 @@
 	<div class="banner">
 		<img src="/w3smclsmrv/Banner-photoshoped.jpg" class="img-fluid">
 		<p class="left-heading">
-			<a href="" class="typewrite text-white text-decoration-none" data-period="2000" data-type='[ "Full-Stack Developer", "I Create...", "I Design...", "I Develop..." ]'>
+			<a href="" class="typewrite text-white text-decoration-none" data-period="2000" data-type='[ "I Create...", "I Design...", "I Develop..." ]'>
 				<span class="wrap"></span>
 			</a>
 			<br>
-			<a href="#letsConnect" role="button" class="btn btn-outline-light rounded-pill px-3">
+			<a href="#letsConnect" role="button" class="btn btn-outline-light rounded-pill px-3" id="btnConnect">
 				<img src="/w3smclsmrv/operator.png" class="img-fluid">
 				Let's Talk
 			</a>
@@ -179,14 +180,14 @@
 			</div>
 		</div>
 
-		<div class="banner3 my-5 bg-dark">
-			<img src="/w3smclsmrv/banner-1.jpg" class="img-fluid">
-			<div class="text-white bn3 w-75 py-5 rounded">
+		<div class="banner3 my-5 py-5 bg-dark">
+			<!-- <img src="/w3smclsmrv/banner-1.jpg" class="img-fluid"> -->
+			<div class="container text-white bn3 w-75 py-5 rounded">
 				<p class="bn3Head"><i class="fa-solid fa-laptop-code mr-4"></i>What I Do ?</p>
 				<h3 class="px-5 pt-3">
-					<p>I work fluently with all aspects and layers of software engineering, from early prototyping to full-scale production use. I build the user interfaces using technologies like ASP.NET, MVC and JavaScript frameworks like Angular, and I handle the server-side logic with C# and .NET. I also manage databases, collaborate with teams, and stay up-to-date with the latest in .NET development.It's all about bringing awesome web applications to life!
+					<p class="text-justify">I work fluently with all aspects and layers of software engineering, from early prototyping to full-scale production use. I build the user interfaces using technologies like ASP.NET, MVC and JavaScript frameworks like Angular, and I handle the server-side logic with C# and .NET. I also manage databases, collaborate with teams, and stay up-to-date with the latest in .NET development.It's all about bringing awesome web applications to life!
 					</p>
-					<p>Whether it's about business requirements, UI/UX, APIs, databases, backend or your fancy new micro-frontend, I'm confident I can help you. With years of hands-on experience architecting complex cloud and standalone applications I'm equipped to help with whatever you can throw at me.
+					<p class="text-justify">Whether it's about business requirements, UI/UX, APIs, databases, backend or your fancy new micro-frontend, I'm confident I can help you. With years of hands-on experience architecting complex cloud and standalone applications I'm equipped to help with whatever you can throw at me.
 					</p>
 				</h3>
 				<div class="contact text-center">
@@ -583,6 +584,7 @@
 		css.innerHTML = ".typewrite > .wrap { border-right: 0.08em solid #fff}";
 		document.body.appendChild(css);
 	};
+
 </script>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
