--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 				<a href="https://twitter.com/sameer_valanju?t=B5abuSIde8vPvUd6HFEFMA&s=09"><i class="bi bi-twitter"></i></a>
 				<a href="https://www.linkedin.com/in/sameer-valanju-10873b19b"><i class="bi bi-linkedin"></i></a>
 				<a href="mailto:contact.webmasterguru@gmail.com"><i class="bi bi-envelope-fill"></i></a>
-				<a href="https://github.com/SValanju"><i class="bi bi-github mx-2"></i></a>
+				<a href="https://github.com/SValanju"><i class="bi bi-github"></i></a>
 			</span>
 		</div>
 		<div class="mx-3"></div>
@@ -271,7 +271,7 @@
 				</div>
 				<div class="p-2 d-flex justify-content-end align-items-center" style="background-color: rgba(0,0,0,.7);">
 					<h5 class="m-0">For more projects visit my github account.</h5>
-					<button class="btn btn-light mx-2" onclick="window.location.href='https://github.com/SValanju'"><i class="fa-brands fa-github mr-2"></i>GitHub</button>
+					<button id="btnGithub" class="btn btn-light mx-2" onclick="window.location.href='https://github.com/SValanju'"><i class="fa-brands fa-github mr-2"></i>GitHub</button>
 				</div>
 			</div>
 		</div>
