--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Webmaster Guru - Freelance web developer</title>
-	<link rel="icon" type="image/png" href="/w3smclsmrv/icon.jpg">
+	<link rel="icon" type="image/png" href="w3smclsmrv/icon.jpg">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="author" content="Sameer Valanju">
 	<meta name="description" content="Hello, I am Sameer. Freelance web developer based in Mumbai, India. I develop websites, web applications & desktop applications. Read More...">
@@ -24,7 +24,7 @@
 	
 <!-- Page Loader -->
 	<div id="loading">
-		<img src="/w3smclsmrv/spinner.gif" id="loading-image" alt="Loading..." />
+		<img src="w3smclsmrv/spinner.gif" id="loading-image" alt="Loading..." />
 	</div>
 
 
@@ -43,7 +43,7 @@
 		<div class="row align-items-center">
 			<div class="col-md-6 col-9">
 				<a class="navbar-brand" href="https://webmasterguru.in/">
-					<img src="/w3smclsmrv/logo1.png" class="w-100">
+					<img src="w3smclsmrv/logo1.png" class="w-100">
 				</a>
 			</div>
 			<div class="col-md-6 col-3 text-right">
@@ -88,30 +88,30 @@
 <!-- Home Page Content -->
 
 	<div class="banner">
-		<img src="/w3smclsmrv/Banner-photoshoped.jpg" class="img-fluid">
+		<img src="w3smclsmrv/Banner-photoshoped.jpg" class="img-fluid">
 		<p class="left-heading">
 			<a href="" class="typewrite text-white text-decoration-none" data-period="2000" data-type='[ "I Create...", "I Design...", "I Develop..." ]'>
 				<span class="wrap"></span>
 			</a>
 			<br>
 			<a href="#letsConnect" role="button" class="btn btn-outline-light rounded-pill px-3" id="btnConnect">
-				<img src="/w3smclsmrv/operator.png" class="img-fluid">
+				<img src="w3smclsmrv/operator.png" class="img-fluid">
 				Let's Talk
 			</a>
 		</p>
 		<div class="right-heading">
 			<p>Webmaster<br>Guru</p>
-			<img src="/w3smclsmrv/facebook.png" class="img-fluid">
-			<img src="/w3smclsmrv/instagram.png" class="img-fluid">
-			<img src="/w3smclsmrv/twitter.png" class="img-fluid">
-			<img src="/w3smclsmrv/linkedin.png" class="img-fluid">
+			<img src="w3smclsmrv/facebook.png" class="img-fluid">
+			<img src="w3smclsmrv/instagram.png" class="img-fluid">
+			<img src="w3smclsmrv/twitter.png" class="img-fluid">
+			<img src="w3smclsmrv/linkedin.png" class="img-fluid">
 		</div>
 	</div>
 
 	<div class="banner1 my-5">
 		<div class="row m-0 align-items-center">
 			<div class="col-md-5 text-center me">
-				<img src="/w3smclsmrv/me.jpg" class="img-fluid w-75">
+				<img src="w3smclsmrv/me.jpg" class="img-fluid w-75">
 			</div>
 			<div class="col-md-7 text-center text-white">
 				<div class="intro py-5">
@@ -147,7 +147,7 @@
 		<div class="container cont1">
 			<div class="row align-items-center py-5">
 				<div class="col-md-5 text-center">
-					<img src="/w3smclsmrv/me3.jpeg" class="img-fluid rounded w-100" style="box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;">
+					<img src="w3smclsmrv/me3.jpeg" class="img-fluid rounded w-100" style="box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;">
 				</div>
 				<div class="col-md-7">
 					<h3 class="mt-5 mb-3">Hello, I'm Sameer Valanju.</h3>
@@ -339,7 +339,7 @@
 				<h4 class="text-center ctr-head">Don’t hesitate to reach out with the contact information below, you can send a message using the form.</h4>
 				<div class="row align-items-center">
 					<div class="col-md-6 my-5 text-center">
-						<img src="/w3smclsmrv/contact.webp" class="img-fluid rounded-circle">
+						<img src="w3smclsmrv/contact.webp" class="img-fluid rounded-circle">
 					</div>
 					<div class="col-md-2"></div>
 					<div class="col-md-4 my-5">
@@ -371,37 +371,37 @@
 			<div class="card-deck">
 				<div class="card align-items-center py-5 sicard">
 					<a href="https://www.facebook.com/sameer.valanju.5">
-						<img src="/w3smclsmrv/fb.png" class="w-50">
+						<img src="w3smclsmrv/fb.png" class="w-50">
 						<h4 class="mt-3">Facebook</h4>
 					</a>
 				</div>
 				<div class="card align-items-center py-5 sicard">
 					<a href="https://www.instagram.com/sameer_valanju">
-						<img src="/w3smclsmrv/insta.png" class="w-50">
+						<img src="w3smclsmrv/insta.png" class="w-50">
 						<h4 class="mt-3">Instagram</h4>
 					</a>
 				</div>
 				<div class="card align-items-center py-5 sicard">
 					<a href="https://twitter.com/sameer_valanju?t=B5abuSIde8vPvUd6HFEFMA&s=09">
-						<img src="/w3smclsmrv/tweet.png" class="w-50">
+						<img src="w3smclsmrv/tweet.png" class="w-50">
 						<h4 class="mt-3">Twitter</h4>
 					</a>
 				</div>
 				<div class="card align-items-center py-5 sicard">
 					<a href="https://www.linkedin.com/in/sameer-valanju-10873b19b">
-						<img src="/w3smclsmrv/in.png" class="w-50">
+						<img src="w3smclsmrv/in.png" class="w-50">
 						<h4 class="mt-3">Linkedin</h4>
 					</a>
 				</div>
 				<div class="card align-items-center py-5 sicard">
 					<a href="mailto:contact.webmasterguru@gmail.com">
-						<img src="/w3smclsmrv/email.png" class="w-50">
+						<img src="w3smclsmrv/email.png" class="w-50">
 						<h4 class="mt-3">Email</h4>
 					</a>
 				</div>
 				<div class="card align-items-center py-5 sicard">
 					<a href="https://github.com/SValanju">
-						<img src="/w3smclsmrv/github-mark.png" class="w-50">
+						<img src="w3smclsmrv/github-mark.png" class="w-50">
 						<h4 class="mt-3">GitHub</h4>
 					</a>
 				</div>
